<resources>
    <string name="app_name">Mockup Tes</string>
    <string name="register_now">Register Now</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register_new_account">Register New Account</string>
    <string name="logo_text">Mockup Tes</string>
    <string name="dts_registration">Registration</string>
    <string name="login_now">Login Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
</resources>
